fix movie synopsis alignment on big screens

--- a/app/components/Movie/index.module.css
+++ b/app/components/Movie/index.module.css
@@ -36,6 +36,7 @@
 }
 .container .synopsis {
   margin-block: 1.2em;
+  margin-left: 0;
 }
 .container img.rentalLogo {
   max-height: 3em;
